--- a/pt_BR.po
+++ b/pt_BR.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: rpm\n"
 "Report-Msgid-Bugs-To: rpm-maint@lists.rpm.org\n"
-"POT-Creation-Date: 2010-03-29 16:08+0300\n"
+"POT-Creation-Date: 2010-03-29 16:14+0300\n"
 "PO-Revision-Date: 2009-02-03 15:37-0300\n"
 "Last-Translator: Igor Pires Soares <igor@projetofedora.org>\n"
 "Language-Team: Brazilian Portuguese <fedora-trans-pt_br@redhat.com>\n"
@@ -1502,7 +1502,7 @@ msgid "Couldn't exec %s: %s\n"
 msgstr "Não foi possível executar %s: %s\n"
 
 # , c-format
-#: build/rpmfc.c:191
+#: build/rpmfc.c:191 lib/rpmscript.c:270
 #, c-format
 msgid "Couldn't fork %s: %s\n"
 msgstr "Não foi possível bifurcar %s: %s\n"
@@ -2930,6 +2930,37 @@ msgstr "Por favor, contate %s\n"
 msgid "Unable to open %s for reading: %m.\n"
 msgstr "Não foi possível abrir %s para leitura: %m.\n"
 
+#: lib/rpmscript.c:85
+msgid "<lua> scriptlet support not built in\n"
+msgstr "suporte a scriptlet <lua> não embutido\n"
+
+# , c-format
+#: lib/rpmscript.c:211
+#, c-format
+msgid "Couldn't create temporary file for %s: %s\n"
+msgstr "Não foi possível criar um arquivo temporário para %s: %s\n"
+
+# , c-format
+#: lib/rpmscript.c:257
+#, c-format
+msgid "Couldn't duplicate file descriptor: %s: %s\n"
+msgstr "Não foi possível duplicar o descritor do arquivo: %s: %s\n"
+
+#: lib/rpmscript.c:280
+#, c-format
+msgid "%s scriptlet failed, waitpid(%d) rc %d: %s\n"
+msgstr "o scriptlet %s falhou, waitpid(%d) rc %d: %s\n"
+
+#: lib/rpmscript.c:284
+#, c-format
+msgid "%s scriptlet failed, signal %d\n"
+msgstr "o scriptlet %s falhou, sinal %d\n"
+
+#: lib/rpmscript.c:287
+#, c-format
+msgid "%s scriptlet failed, exit status %d\n"
+msgstr "o scriptlet %s falhou, status de saída %d\n"
+
 #: lib/rpmtd.c:257
 msgid "Unknown format"
 msgstr "Formato desconhecido"
@@ -3625,26 +3656,6 @@ msgstr "não verificar a assinatura do cabeçalho+carga útil"
 # , c-format
 #~ msgid "use threads for package state machine"
 #~ msgstr "utilizar threads para a máquina de estados do pacote"
-
-#~ msgid "<lua> scriptlet support not built in\n"
-#~ msgstr "suporte a scriptlet <lua> não embutido\n"
-
-# , c-format
-#~ msgid "Couldn't create temporary file for %s: %s\n"
-#~ msgstr "Não foi possível criar um arquivo temporário para %s: %s\n"
-
-# , c-format
-#~ msgid "Couldn't duplicate file descriptor: %s: %s\n"
-#~ msgstr "Não foi possível duplicar o descritor do arquivo: %s: %s\n"
-
-#~ msgid "%s scriptlet failed, waitpid(%d) rc %d: %s\n"
-#~ msgstr "o scriptlet %s falhou, waitpid(%d) rc %d: %s\n"
-
-#~ msgid "%s scriptlet failed, signal %d\n"
-#~ msgstr "o scriptlet %s falhou, sinal %d\n"
-
-#~ msgid "%s scriptlet failed, exit status %d\n"
-#~ msgstr "o scriptlet %s falhou, status de saída %d\n"
 
 #~ msgid "%s: %s scriptlet failed (%d), skipping %s\n"
 #~ msgstr "%s: %s o scriptlet falhou (%d), ignorando %s\n"
