--- a/br.po
+++ b/br.po
@@ -1,20 +1,22 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
-# Thierry Vignaud <thierry.vignaud@gmail.com>, 2012
 #
+# Translators:
+# Thierry Vignaud <thierry.vignaud@gmail.com>, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: rpm\n"
+"Project-Id-Version: RPM\n"
 "Report-Msgid-Bugs-To: rpm-maint@lists.rpm.org\n"
-"POT-Creation-Date: 2012-12-19 12:48+0200\n"
-"PO-Revision-Date: 2012-12-11 12:48+0100\n"
-"Last-Translator: Thierry Vignaud <thierry.vignaud@gmail.com>\n"
-"Language-Team: br\n"
+"POT-Creation-Date: 2012-12-19 12:57+0200\n"
+"PO-Revision-Date: 2012-12-19 10:54+0000\n"
+"Last-Translator: pmatilai <pmatilai@laiskiainen.org>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: br\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: cliutils.c:21 lib/poptI.c:29
 #, c-format
